--- a/htmlPages/UserManager/event_committee_reg_form.html
+++ b/htmlPages/UserManager/event_committee_reg_form.html
@@ -12,7 +12,7 @@
             background-image: url("{% static 'media/homepagebg.jpeg' %}");
         }
     </style>
-    <link rel="shortcut icon" href="{% static 'media/favicon.ico' type='image/x-icon' %}">
+    <!-- <link rel="shortcut icon" href="{% static 'media/favicon.ico' type='image/x-icon' %}"> -->
     <title>NU Tech | Registration Form</title>
 </head>
 <body>
