--- a/htmlPages/EventHead/eventHead_base.html
+++ b/htmlPages/EventHead/eventHead_base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=1141">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut icon" href="{% static 'media/favicon.ico' type='image/x-icon' %}">
+    <!-- <link rel="shortcut icon" href="{% static 'media/favicon.ico' type='image/x-icon' %}"> -->
     
     <link rel="stylesheet" type="text/css" href="{% static 'css/comman.css'%}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/EventHead/eventHead_header.css' %}">
