--- a/htmlPages/UserManager/eventCommittee.html
+++ b/htmlPages/UserManager/eventCommittee.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=1141">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut icon" href="{% static 'media/favicon.ico' type='image/x-icon' %}">
+    <!-- <link rel="shortcut icon" href="{% static 'media/favicon.ico' type='image/x-icon' %}"> -->
     <link rel="stylesheet" href="{% static 'css/UserManager/event_committee.css' %}">
-    <title>NU Tech | Event Committee </title>
+    <title>Forum | Event Committee </title>
     <style>
         body{
             background-image: url("{% static 'media/homepagebg.jpeg' %}");
