--- a/htmlPages/UserManager/successRegAsEventCommittee.html
+++ b/htmlPages/UserManager/successRegAsEventCommittee.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut icon" href="{% static 'media/favicon.ico' type='image/x-icon' %}">
-    <title>Success | Event Committee | NU Tech</title>
+    <!-- <link rel="shortcut icon" href="{% static 'media/favicon.ico' type='image/x-icon' %}"> -->
+    <title>Success | Event Committee | Forum</title>
 </head>
 <body>
     <h1>Successfully Registered</h1>
