--- a/htmlPages/EventWebSite/homepage.html
+++ b/htmlPages/EventWebSite/homepage.html
@@ -10,7 +10,7 @@
 
     {% block title %}
 
-    <title>Event-verse</title>
+    <title>Forum</title>
 
     {% endblock %}
 
@@ -84,7 +84,7 @@
          
         <div class="contact_data">
             <div class="contact">
-                <h2><p>Event-verse team</p>
+                <h2><p>Forum team</p>
                 </h2>
                 <h4><p class="email_contact">demo@123.in</p>
                 <p class="contactno_contact">+91 8779850425</p>
