--- a/htmlPages/EventWebSite/login.html
+++ b/htmlPages/EventWebSite/login.html
@@ -12,7 +12,7 @@
 {% endblock %}
 
 {% block title %}
-    <title>Sign In |Event-verse</title>
+    <title>Sign In |Forum</title>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 {% endblock %}
 
