--- a/htmlPages/EventWebSite/registration.html
+++ b/htmlPages/EventWebSite/registration.html
@@ -12,7 +12,7 @@
 {% endblock %}
 
 {% block title %}
-    <title>Registration | NUTECH-2020</title>
+    <title>Registration | Forum</title>
 {% endblock %}
 
 {% block content %}
