--- a/htmlPages/EventWebSite/base.html
+++ b/htmlPages/EventWebSite/base.html
@@ -4,12 +4,11 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="NU-Sports">
+    <meta name="description" content="Forum-Sports">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
     <meta name="viewport" content="width=1141">
     <link rel="shortcut icon" href="{% static 'media/favicon.ico' type='image/x-icon' %}">
     <link rel="stylesheet" href="{% static 'css/EventWebSite/base_participant.css'%}">
-    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     {% block loadcss %}
 
     {% endblock %}
@@ -21,7 +20,7 @@
 
 <body>
     <div id="titleBar" class="basic">
-        <a href="{% url 'homepage' %}"><img id='logo' src="{% static 'media/imageslogo.png' %}" alt="NU-Sport Logo" width="200px" height="250px"></a>
+        <a href="{% url 'homepage' %}"><img id='logo' src="{% static 'media/imageslogo.png' %}" alt="Forum-Sports Logo" width="200px" height="250px"></a>
         {% if not user.is_authenticated %}
         
         <a href="{% url 'eventCommittee' %}"><button id="login_btn" class="submit_btn">Administrative Login</button></a>
