--- a/htmlPages/EventWebSite/homepage.html
+++ b/htmlPages/EventWebSite/homepage.html
@@ -38,7 +38,7 @@
     <div id="aboutus4" class="middle_content">
         <p class="aboutus_title" id="aboutus">About Us</p>
 
-        <p id="aboutus_content">The Event-verse 2024 is a platform, Where students are given an opportunity to explore themselves.in this platform student and faculty are used track the record of data </p>
+        <p id="aboutus_content">The Forum 2024 is a platform, Where students are given an opportunity to explore themselves.in this platform student and faculty are used track the record of data </p>
 
     </div>
 
