unwanted img delete

--- a/htmlPages/Administrator/volunteer_manager.html
+++ b/htmlPages/Administrator/volunteer_manager.html
@@ -63,9 +63,9 @@
     
                         <tr>
                                 <td>335</td>
-                                <td>Niral</td>
-                                <td>7096890142</td>
-                                <td>niralkpatelia@gmail.com</td>
+                                <td>sachin</td>
+                                <td>8779850425</td>
+                                <td>sachinprajapti0702@gmail.com</td>
                                 <td>1500</td>
                                 <td><div class="status_container"><input type="checkbox" id="status_checkbox"></div></td>
                                 <td><button class="edit_btn">EDIT</button></td>
