--- a/htmlPages/EventHead/eventHead_header.html
+++ b/htmlPages/EventHead/eventHead_header.html
@@ -2,7 +2,7 @@
 
 <nav id="titleBar">
     <div id="logo_container">
-        <a href="{% url 'homepage' %}"><img id='logo' src="{% static 'media/logo.png' %}" alt="NU-Sport Logo"></a>
+        <a href="{% url 'homepage' %}"><img id='logo' src="{% static 'media/logo.png' %}" alt="Sport Logo"></a>
     </div>
     <div class="links">
         {% if user.is_authenticated %}
