--- a/htmlPages/EventWebSite/base.html
+++ b/htmlPages/EventWebSite/base.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Forum-Sports">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
     <meta name="viewport" content="width=1141">
-    <link rel="shortcut icon" href="{% static 'media/favicon.ico' type='image/x-icon' %}">
+    <!-- <link rel="shortcut icon" href="{% static 'media/favicon.ico' type='image/x-icon' %}"> -->
     <link rel="stylesheet" href="{% static 'css/EventWebSite/base_participant.css'%}">
     {% block loadcss %}
 
