--- a/htmlPages/UserManager/event_committee_reg_form.html
+++ b/htmlPages/UserManager/event_committee_reg_form.html
@@ -13,7 +13,7 @@
         }
     </style>
     <!-- <link rel="shortcut icon" href="{% static 'media/favicon.ico' type='image/x-icon' %}"> -->
-    <title>NU Tech | Registration Form</title>
+    <title>Forum | Registration Form</title>
 </head>
 <body>
     <div id="reg_form">
