nu logo remove from eventhead

--- a/htmlPages/Coordinator/coordinator_header.html
+++ b/htmlPages/Coordinator/coordinator_header.html
@@ -2,6 +2,7 @@
 
 <nav id="titleBar">
     <div id="logo_container">
+        <a href="{% url 'homepage' %}"><img id='logo' src="{% static 'media/imageslogo.png' %}" width="120px" style="margin-top: 2px;" alt="Sport Logo"></a>
         <!-- <a href="{% url 'homepage' %}"><img id='logo' src="{% static 'media/logo.png' %}" alt="NU-Sport Logo"></a> -->
     </div>
     <div class="links">
