--- a/htmlPages/EventWebSite/base.html
+++ b/htmlPages/EventWebSite/base.html
@@ -32,7 +32,7 @@
         <nav id="navBar">
             <ul class="navigation">
                 <a id="home" href="{% url 'homepage' %}">Home</a>
-                <a id="about" href="homepage#about">About</a>
+                <a id="about" href="homepage#aboutus4">About</a>
                 <a id="event" href="{% url 'event_detail' %}">Events</a>
                 <!-- <a id="sponsor" href="homepage#sponsers">Sponsors</a> -->
                 <a id="contact" href="homepage#contact_us_container">Contact</a>
