--- a/htmlPages/Coordinator/coordinator_login.html
+++ b/htmlPages/Coordinator/coordinator_login.html
@@ -9,15 +9,11 @@
     <link rel="stylesheet" href="{% static 'css/login.css' %}" type="text/css">
     <!-- <style>
         body{
-            background-image: url("{% static 'media/bgcoodinate.jpeg' %}");
+            background-image: url("{% static 'media/nirma_bck.jpg' %}");
         }
     </style> -->
-    <style>
-        body {
-            background-image: url("{% static 'media/bgcoodinate.jpeg' %}");
-        }
-    </style>
     
+   
 </head>
 <body>
         <div id="reg_form_box" class="box">
