--- a/htmlPages/EventWebSite/login.html
+++ b/htmlPages/EventWebSite/login.html
@@ -24,12 +24,12 @@
     <form method="POST">
         {% csrf_token %}
         <div id="username" class="inputbox innerbox">
-            <input name="usernamefield" type="email" value="yelena.belova@gmail.com" required="required">
+            <input name="usernamefield" type="email" value="demo123@gmail.com" required="required">
             <label>Email Id</label>
         </div>
         
         <div id="password" class="inputbox innerbox">
-            <input name="passwordfield" type="password" value="user@123" required="required">
+            <input name="passwordfield" type="password" value="manage@123" required="required">
             <label>Password</label>
         </div>
         
