--- a/htmlPages/EventHead/eventHead_login.html
+++ b/htmlPages/EventHead/eventHead_login.html
@@ -7,9 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sign In | Forum</title>
     <link rel="stylesheet" href="{% static 'css/login.css' %}" type="text/css">
-    <style>
+    <!-- <style>
         body{
             background-image: url("{% static 'media/nirma_bck.jpg' %}");
+        }
+    </style> -->
+    <style>
+        body{
+            background-image: url("{% static 'media/homepagebg.jpeg' %}");
         }
     </style>
 </head>
