--- a/htmlPages/Coordinator/coordinator_login.html
+++ b/htmlPages/Coordinator/coordinator_login.html
@@ -9,11 +9,15 @@
     <link rel="stylesheet" href="{% static 'css/login.css' %}" type="text/css">
     <!-- <style>
         body{
-            background-image: url("{% static 'media/nirma_bck.jpg' %}");
+            background-image: url("{% static 'media/bgcoodinate.jpeg' %}");
         }
     </style> -->
+    <style>
+        body {
+            background-image: url("{% static 'media/bgcoodinate.jpeg' %}");
+        }
+    </style>
     
-   
 </head>
 <body>
         <div id="reg_form_box" class="box">
