--- a/htmlPages/EventWebSite/homepage.html
+++ b/htmlPages/EventWebSite/homepage.html
@@ -38,7 +38,8 @@
     <div id="aboutus4" class="middle_content">
         <p class="aboutus_title" id="aboutus">About Us</p>
 
-        <p id="aboutus_content">"The Forum 2024 serves as a dynamic platform, providing students with unparalleled opportunities for self-exploration and growth. Within this innovative space, both students and faculty actively engage in tracking and managing valuable data records."</p>
+        <p id="aboutus_content">The Forum 2024 is a platform, Where students are given an opportunity to explore themselves.in this platform student and faculty are used track the record of data </p>
+
     </div>
 
     <!-- <div class="about" id="about" name="about">
